--- a/static/css/c-index1.2.css
+++ b/static/css/c-index1.2.css
@@ -58,19 +58,19 @@
   display: inline-block;
   width: 32px;
   height: 15px;
-  background: linear-gradient(0deg, rgba(255, 221, 217, 1), rgba(255, 240, 240, 1));
+  background:linear-gradient(-90deg,rgba(255,133,60,1),rgba(255,67,47,1));
   border-radius: 6px 0px 6px 0px;
   text-align: center;
   line-height: 15px;
   margin-left: 10px;
   font-size: 11px;
-  color: #FF7F7F;
+  color: #fff;
   font-style: normal;
 }
 
 .m-dong .m-jia span i {
-  background: linear-gradient(0deg, rgba(221, 244, 255, 1), rgba(241, 250, 255, 1));
-  color: #4DB5FF;
+  background:linear-gradient(-270deg,rgba(52,138,255,1),rgba(106,204,255,1));
+  color: #fff;
 }
 
 .m-dong .t-o {
@@ -129,14 +129,89 @@
   top: 334px;
 }
 
+.m-dong .dynamic-hd {
+  overflow: hidden;
+  margin-top: 30px;
+  padding-bottom: 4px;
+}
+
+.m-dong .swiper-slide {
+  border-bottom: 0.5px solid #DFE1E6;
+}
+
+.m-dong .tegood {
+  width: 80px;
+  height: 50px;
+  background:rgba(247,247,247,1);
+  padding-left: 12px;
+  padding-top: 10px;
+  position: relative;
+}
+
+.m-dong .swiper-dynamic .dactive {
+  background-color: #F2FBFF;
+}
+
+.m-dong .swiper-dynamic .dactive h5 {
+  color: #3EACF0
+}
+
+.m-dong .swiper-dynamic .dactive p {
+  color: #75C2F1
+}
+
+.m-dong .tegood h5 {
+  color: #616366;
+  font-size: 13px;
+  margin-bottom: 4px;
+}
+
+.m-dong .tegood p {
+  color: #B3B3B3;
+  font-size: 10px;
+}
+
+.m-dong .tegood div {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background:rgba(223,225,230,1);
+  position: absolute;
+  bottom: -4px;
+  left: -4px
+}
 
 /* 优惠 */
+.m-you {
+  position: relative;
+  width: 100%
+}
+
 .m-y-g {
   width: 100%;
 }
 
-.m-you h3 {
-  margin-bottom: 0;
+.m-you button {
+  position: absolute;
+  width: 18.67%;
+  height: 26px;
+  border-radius: 13px;
+  background:linear-gradient(180deg,rgba(248,195,61,1),rgba(255,238,187,1));
+  top: 20px;
+  right: 4%;
+  color: #EF2B31;
+  font-size: 13px;
+  line-height: 26px;
+  text-align: center;
+  border: 0
+}
+
+.m-you span {
+  position: absolute;
+  font-size: 12px;
+  color: #fff;
+  right: 6%;
+  top: 55px
 }
 
 /* 户型分析 */
@@ -158,12 +233,13 @@
 
 .m-fen>>>.swiper-pagination-bullet {
   border-radius: 0;
-  width: 12px;
-  height: 4px;
+  width: 5px;
+  height: 2px;
 }
 
 .m-fen>>>.swiper-pagination-bullet-active {
   background-color: #4DB5FF;
+  width: 12px;
 }
 
 .m-fen .dui-zi .dui-box {
@@ -240,8 +316,8 @@
 .m-fen button {
   width: 92%;
   height: 44px;
-  background-color: #F0F2F5;
-  color: #4DB5FF;
+  background-color: #EDF5F9;
+  color: #3DABEF;
   font-size: 16px;
   text-align: center;
   line-height: 44px;
@@ -250,7 +326,6 @@
   border-radius: 4px;
   margin-bottom: 26px;
   margin-top: 20px;
-  font-weight: bold;
 }
 
 #m_f_box {
@@ -304,7 +379,6 @@
 }
 
 .m-dian ul li {
-  border-bottom: 0.5px solid #F2F3F7;
   padding-bottom: 10px;
   padding-top: 16px;
 }
@@ -342,7 +416,19 @@
 .m-dian ul li .right h6 {
   color: #2E3033;
   font-size: 13px;
-  margin-bottom: 16px;
+}
+
+.m-dian ul li .right h6 .attitude {
+  display: inline-block;
+  width:38px;
+  height: 14px;
+  text-align: center;
+  line-height: 14px;
+  font-size: 10px;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  background-color: #3EABEF;
 }
 
 .m-dian ul li .right .txt {
@@ -354,7 +440,6 @@
 .m-dian ul li .right .btn {
   padding: 0;
   text-align: initial;
-  margin-top: 10px;
   width: 100%;
 }
 
@@ -372,7 +457,6 @@
 
 .m-dian ul li .right .interaction {
   float: right;
-  width: 40%;
 }
 
 .m-dian ul li .right .interaction span {
@@ -415,8 +499,8 @@
   width: 92%;
   margin-top: 6px;
   height: 44px;
-  background-color: #F0F2F5;
-  color: #4DB5FF;
+  background-color: #EDF5F9;
+  color: #3DABEF;
   font-size: 16px;
   text-align: center;
   line-height: 44px;
@@ -424,7 +508,6 @@
   border-radius: 4px;
   border: 0px;
   margin-bottom: 20px;
-  font-weight: bold;
 }
 
 #m_p_box {
@@ -631,19 +714,22 @@
   width: 100%;
   height: 44px;
   border-radius: 5px;
-  background-color: #F2F4F7;
-  color: #4DB5FF;
+  background-color: #EDF5F9;
+  color: #3DABEF;
   font-size: 16px;
   text-align: center;
   line-height: 44px;
   border: 0;
   margin-bottom: 34px;
-  font-weight: bold;
 }
 
 /* 楼盘对比 */
 .m-contrast {
   padding: 0 4%;
+}
+
+.m-contrast .swiper-pk {
+  overflow: hidden;
 }
 
 .m-contrast h4 {
@@ -652,6 +738,60 @@
   margin-top: 18px;
   font-weight: bold;
   margin-bottom: 10px;
+}
+
+.m-contrast .tegood img{
+  width: 100%;
+  height: 90px;
+}
+
+.m-contrast .tegood .img {
+  position: relative;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.m-contrast .tegood .img p {
+  width: 50px;
+  height: 16px;
+  background:linear-gradient(-270deg,rgba(255,124,72,1),rgba(255,66,52,1));
+  border-radius:2px 0px 2px 0px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 10px;
+  color: #fff;
+}
+
+.m-contrast .tegood h5 {
+  color: #121212;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.m-contrast .tegood .llk {
+  color: #5E6166;
+  font-size: 11px;
+  margin-bottom: 4px;
+}
+
+.m-contrast .tegood .red {
+  color: #FF6A48;
+  font-size: 12px;
+}
+
+.m-contrast .tegood button {
+  width: 100%;
+  height: 30px;
+  background-color: #EDF5FA;
+  text-align: center;
+  line-height: 30px;
+  color: #4DB5FF;
+  font-size: 13px;
+  border: 0;
+  font-weight: normal;
+  border-radius: 3px;
 }
 
 .re-con {
