--- a/static/css/c-index.css
+++ b/static/css/c-index.css
@@ -77,12 +77,12 @@ body {
 .m-incro h3 {
   font-size: 20px;
   color: #404040;
-  margin: 27px 0 8px 4%;
+  margin: 20px 0 10px 4%;
   font-weight: bold;
 }
 
 .m-incro .m-ic-icons {
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   margin-top: 14px;
   position: relative;
 }
@@ -143,7 +143,7 @@ body {
 
 .m-incro .m-jtop li p {
   color: #FF6E57;
-  font-size: 12px;
+  font-size: 9px;
   font-style: normal;
   display: block;
   height: 22px;
@@ -151,11 +151,11 @@ body {
   font-weight: bold;
 }
 .m-incro .m-jtop li p.lo{
-  font-size: 18px;
+  font-size: 16px;
 }
 .m-incro .m-jtop li p span{
   color: #FF6E57;
-  font-size: 18px;
+  font-size: 16px;
 }
 .m-incro .m-jtop li span {
   color: #999999;
@@ -175,7 +175,7 @@ body {
 .m-incro .m-ibottom ul li {
   color: #919499;
   font-size: 14px;
-  margin-bottom: 9px;
+  margin-bottom: 6px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -202,9 +202,8 @@ body {
 
 .m-incro .go-map {
   width: 96%;
-  height: 44px;
-
-  line-height: 44px;
+  height: 34px;
+  line-height: 34px;
   margin-bottom: 18px;
 }
 
@@ -245,12 +244,12 @@ body {
   display: inline-block;
   font-size: 15px;
   text-align: center;
-  height: 44px;
-  line-height: 44px;
-  width: 40%;
+  height: 40px;
+  line-height: 40px;
+  width: 44%;
   background-color: #EDF5FA;
   border-radius: 5px;
-  margin-left: 6.666667%;
+  margin-left: 4%;
 }
 
 .m-incro .m-new div img {
@@ -443,12 +442,12 @@ body {
 
 .m-dong button {
   width: 92%;
-  height: 44px;
+  height: 40px;
   background-color: #EDF5F9;
   color: #3DABEF;
   font-size: 16px;
   text-align: center;
-  line-height: 44px;
+  line-height: 40px;
   margin-left: 4%;
   border-radius: 5px;
   border: 0px;
@@ -578,6 +577,7 @@ body {
 
 .m-hu .tegood .top img {
   height: 100%;
+  max-width: 100%;
 }
 
 .m-hu .tegood h5 {
@@ -700,7 +700,7 @@ body {
 .m-dai .m-d-content button {
   display: block;
   width: 100%;
-  height: 44px;
+  height: 40px;
   background: #EDF5F9;
   border-radius: 5px;
   color: #3DABEF;
@@ -918,12 +918,12 @@ body {
 
 .m-zhou button {
   width: 92%;
-  height: 44px;
+  height: 40px;
   background-color: #EDF5F9;
   color: #3DABEF;
   font-size: 16px;
   text-align: center;
-  line-height: 44px;
+  line-height: 40px;
   margin-left: 4%;
   border-radius: 5px;
   border: 0px;
@@ -984,9 +984,20 @@ body {
   color: #999999;
   font-size: 13px;
   margin-bottom: 3px;
+}
+.m-ling .m-iright p.ling-ssd {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
   overflow: hidden;
-  text-overflow:ellipsis;
-  white-space: nowrap;
+  height: 18px;
+  width: 92%
+}
+
+.m-ling .m-iright p i {
+  font-style: normal;
+  display: block;
+  margin-bottom: 3px;
 }
 
 .m-ling .m-iright span {
@@ -1003,12 +1014,12 @@ body {
 
 .m-ling button {
   width: 92%;
-  height: 44px;
+  height: 40px;
   background-color: #F0F2F5;
   color: #4DB5FF;
   font-size: 16px;
   text-align: center;
-  line-height: 44px;
+  line-height: 40px;
   margin-left: 4%;
   border-radius: 5px;
   border: 0px;
@@ -1104,12 +1115,12 @@ body {
 
 .m-huo .m-btns button {
   width: 92%;
-  height: 44px;
+  height: 40px;
   background-color: #F0F5F2;
   color: #1CB64F;
   font-size: 16px;
   text-align: center;
-  line-height: 44px;
+  line-height: 40px;
   margin-left: 4%;
   border: 0px;
   border-radius: 5px;
