--- a/static/css/c-index1.2.css
+++ b/static/css/c-index1.2.css
@@ -987,7 +987,7 @@
     box-shadow: 0 0 3px 0 rgba(0,0,0,.05);
 }
 .fixs img{
-  width:5.4%;
+  width:1.25rem;
   margin-left: 4%;
   float: left;
   margin-top:12px;
