--- a/static/css/c-index.css
+++ b/static/css/c-index.css
@@ -762,7 +762,16 @@ body {
   float: left;
   margin-top:5px
 }
-
+.m-dai .m-d-content .m-w-content p {
+  display: flex;
+}
+.m-dai .m-d-content .m-w-content p .imgbox {
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
 .m-dai .m-d-content .m-w-content p span {
   background:linear-gradient(-270deg,rgba(52,138,255,1),rgba(106,204,255,1));
   float: left;
@@ -1336,6 +1345,7 @@ body {
   background-color: #fff;
   z-index: 200;
   box-shadow: 0px 0px 9px 1px rgba(6, 0, 1, 0.04);
+  max-width: 450px;
 }
 
 .m-botnav p {
